bk_ida/gccida/g0/gen_aux_info_record
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_aux_info_record/src/c-aux-info.c:1047:7: error: use of undeclared identifier 'compiled_from_record_0'
if ( !compiled_from_record_0++ ) 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_aux_info_record/src/obj/c-aux-info.o] Error 1
